fixed image paths and removed leading slashes

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <div class="logo">
             <a href="/index.html"><img src="./assets/nav-bar/Logo.svg" alt="Linkedin"></a>
             <div class="search_box">
-                <img src="/assets/nav-bar/search-icon.svg">
+                <img src="assets/nav-bar/search-icon.svg">
                 <input type="text" placeholder="Search">
             </div>
         </div>
@@ -52,8 +52,8 @@
                 <div class="section-a">
                     <section class="cover">
                         <div class="pfp">
-                            <img class="edtt" src="/assets/header/pfp.png" alt="Profile pic"> 
-                            <img class="edtt" src="/assets/main/Button - Edit intro.png" alt=""></div>
+                            <img class="edtt" src="assets/header/pfp.png" alt="Profile pic"> 
+                            <img class="edtt" src="assets/main/Button - Edit intro.png" alt=""></div>
                     </section>
                     <section class="ctn">
                         <div class="info">
@@ -67,12 +67,12 @@
                             <span class="connect">500+ connections</s>
 
                             <div class="btns">
-                                <button class="message"><span class="paper-plane"><img src="/assets/main/paper-plane.png" alt=""></span><span>Message</span></button>
+                                <button class="message"><span class="paper-plane"><img src="assets/main/paper-plane.png" alt=""></span><span>Message</span></button>
                                 <button class="more">More</button>
                             </div>
                         </div>
                         <div class="brnd">
-                            <img src="/assets/main/Container.png" alt="">
+                            <img src="assets/main/Container.png" alt="">
                         </div>
                     </section>
 
@@ -100,13 +100,13 @@
                         </div>
                             <div class="tp-skls">
                                 <div class="info">
-                                <span class="dmd"><img src="/assets/main/skills-medium.png" alt=""></span>
+                                <span class="dmd"><img src="assets/main/skills-medium.png" alt=""></span>
                             
                                 <section class="info-wrp">
                                 <p class="heading">Top skills</p><br>
                                 <section class="wrp">
                                         <p class="sub-heading">Wordpress Development • Digital Designs • UI/UX • Web Content Accessibility Guidelines (WCAG) • Search Engine Optimization (SEO)</p>
-                                        <span><img src="/assets/main/Container(1).png"></span>
+                                        <span><img src="assets/main/Container(1).png"></span>
                                         </section>
                                     </section>
                             </div>
@@ -134,7 +134,7 @@
                 <section>
                     <div class="edt">
                         <p class="heading">Profile language</p>
-                        <img class="edtt" src="/assets/main/Button - Edit intro.png" alt="edit"><br>
+                        <img class="edtt" src="assets/main/Button - Edit intro.png" alt="edit"><br>
                     </div>
                     <button>English</button>
                     <button>Espanol</button>
@@ -143,7 +143,7 @@
                 <section>
                     <div class="edt">
                         <p class="heading">Public profile & URL</p>
-                        <img class="edtt" src="/assets/main/Button - Edit intro.png" alt="edit">
+                        <img class="edtt" src="assets/main/Button - Edit intro.png" alt="edit">
                     </div>
                     <p>www.linkedin/com/in/kate-elodie-mohr-designer</p>
                 </section>
