--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="icon Nav-container">
             <ul>
-                <li class="nav-links"><a href="/Index.html" class="active home"><span></span>Home</a></li>
+                <li class="nav-links"><a href="/index.html" class="active home"><span></span>Home</a></li>
                 <li class="nav-links"><a href="#" class="Mynetwork"><span></span>My Network</a></li>
                 <li class="nav-links"><a href="#" class="jobs"><span></span>Jobs</a></li>
                 <li class="nav-links"> <a href="#" class="Messaging"><span></span>Messaging</a></li>
